<resources>
    <string name="app_name">AndroidApp</string>
    <string name="username">username</string>
    <string name="conect">conect</string>
    <string name="signUp">signUp</string>
    <string name="Name">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="mail">Email</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maybe">Maybe</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back">BACK</string>
    <string name="add">add</string>
    <string name="reset">reset</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="about_toast">about toast</string>
    <string name="cart">Cart</string>
    <string name="users">Users</string>
    <string name="home">Home</string>
    <string name="chores">Chores</string>
</resources>