<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/photo"
        android:alpha=".65"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/eventViewName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="TextView"
                android:textSize="36sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/event_list_yes"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:text="@string/yes" />

                <TextView
                    android:id="@+id/event_list_no"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:text="@string/no" />

                <TextView
                    android:id="@+id/event_list_maybe"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_primary"
                    android:gravity="center"
                    android:text="@string/maybe" />
            </LinearLayout>


        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>